# llm4code

./: pyproject.toml
langchain_version/: demo.py
langchain_version/src/: __init__.py
langchain_version/src/agents/: __init__.py  default.py  junior.md  junior.py  reviewer.md  reviewer.py  state.py  supervisor.md  supervisor.py  utils.py
langchain_version/src/graph/: __init__.py  add_feature.py
software_team/: pyproject.toml
software_team/AISoftTeam/: graph.py
software_team/AISoftTeam/agents/: __init__.py  analyst.py  coder.py  coder_2.py  coordinator.py  extractor.py  github_rag.py  tester.py  utils.py  webscraper.py
software_team/demo/: from_scratch.ipynb  main.py  team.ipynb  test.ipynb
