[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.72",
    "pydantic-ai[logfire]>=0.0.24",
]


ignore_no_config = true

[tool.uv.workspace]
members = ["output"]
